Se agregaron las etiquetas metas

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="React, Componentes, API, Clima, Ejercicio 13, RollingCode, comision 42i" />
+    <meta name="description" content="Ejercicio nº13 React" />
+    <meta name="author" content="Esteban Molina" />
     <title>App Clima</title>
   </head>
   <body>
